# slack-cli-rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  release.toml
.github/workflows/: ci.yml  docker.yml  release.yml
src/: lib.rs  main.rs  slack.rs  token.rs
